--- a/index.html
+++ b/index.html
@@ -201,8 +201,9 @@
                             <li>Email support</li>
                             <li>Help center access</li>
                         </ul>
-                        <button type="button" class="w-100 btn btn-lg btn-outline-primary">Sign up for free</button>
-                    </div>
+                        <button type="button" class="w-100 btn btn-lg btn-primary" data-toggle="modal" data-target="#SignUpModalLong" >Sign up for free</button>
+                        
+                      </div>
                 </div>
             </div>
             <div class="col">
