--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Topics
                     </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Web Devlopment</a>
-                        <a class="dropdown-item" href="#">App Devlopment</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Something else here</a>
+                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a href="https://docs.google.com/document/d/1QR-ckFfNomfITsUfjW1pD-eZbybgNVscv3-UKP6cT6E/edit#"
+                            class="dropdown-item">Web Devlopment</a>
+                        <a href="https://docs.google.com/document/d/1nl7jAWYmt0zvYmbImp8pT-VLMNdHedoMdvg7qvQ1EV8/edit"
+                            class="dropdown-item">App Devlopment</a>
                     </div>
                 </li>
                 <li class="nav-item">
